dist/1.0/bin/sample/retrieveUnpackaged/objects/DocumentTemplate__c.object
<CustomObject>
    <description>Object containing information about document template</description>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Document Templates</relationshipLabel>
        <relationshipName>Document_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>Document Type the template should be used for</description>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Order Form (SOF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Protocol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>File Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Template Name</description>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequiresRelatedDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Related Document</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentType__c</columns>
        <columns>GTS_Location__c</columns>
        <columns>Name__c</columns>
        <columns>Bundle__c</columns>
        <columns>FileName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DT{00000}</displayFormat>
        <label>Document Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>